--- a/webapp/channels/src/components/login/login.scss
+++ b/webapp/channels/src/components/login/login.scss
@@ -154,6 +154,7 @@
 
                         width: 100%;
                         margin-top: 30px;
+                        border-radius: 50px;
                     }
                 }
 
